RESOLVED FIXED106764
Web Inspector: Native Memory Instrumentation: fix instrumentation for already instrumented classes 3/3
https://bugs.webkit.org/show_bug.cgi?id=106764
Summary Web Inspector: Native Memory Instrumentation: fix instrumentation for already...
Ilya Tikhonovsky
Reported 2013-01-14 01:04:44 PST
last three classes with not instrumented members were fixed.
Attachments
Patch (3.22 KB, patch)
2013-01-14 01:06 PST, Ilya Tikhonovsky
vsevik: review+
Ilya Tikhonovsky
Comment 1 2013-01-14 01:06:06 PST
Ilya Tikhonovsky
Comment 2 2013-01-14 01:14:04 PST
Note You need to log in before you can comment on or make changes to this bug.