Web Inspector: Native Memory Instrumentation: fix instrumentation for already instrumented classes 3/3 https://bugs.webkit.org/show_bug.cgi?id=106764

Reviewed by Vsevolod Vlasov.

Last three classes with not instrumented members were fixed.

* css/CSSGroupingRule.cpp:
(WebCore::CSSGroupingRule::reportMemoryUsage):
* css/StyleScopeResolver.cpp:
(WebCore::StyleScopeResolver::reportMemoryUsage):
* loader/cache/CachedResourceLoader.cpp:
(WebCore::CachedResourceLoader::reportMemoryUsage):

Canonical link: https://commits.webkit.org/124999@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139590 268f45cc-cd09-0410-ab3c-d52691b4dbfc