Source/WebCore/css/CSSGroupingRule.cpp
@@ -164,6 +164,7 @@ void CSSGroupingRule::reportMemoryUsage(MemoryObjectInfo* memoryObjectInfo) cons
 {
     MemoryClassInfo info(memoryObjectInfo, this, WebCoreMemoryTypes::CSS);
     CSSRule::reportMemoryUsage(memoryObjectInfo);
+    info.addMember(m_groupRule);
     info.addMember(m_childRuleCSSOMWrappers);
     info.addMember(m_ruleListCSSOMWrapper);
 }
